--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,34 +8,38 @@
 
     <EditText
         android:id="@+id/userPasswordText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="42dp"
-        android:layout_marginEnd="3dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="35dp"
+        android:layout_marginEnd="35dp"
+        android:layout_marginBottom="42dp"
         android:ems="10"
         android:hint="password"
         android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="@+id/signUpButton"
+        app:layout_constraintBottom_toTopOf="@+id/signInButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/userEmailText" />
 
     <Button
         android:id="@+id/signInButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="7dp"
-        android:layout_marginTop="23dp"
-        android:layout_marginEnd="28dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="45dp"
+        android:layout_marginEnd="48dp"
+        android:layout_marginBottom="215dp"
         android:onClick="signIn"
         android:text="Sign In"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/signUpButton"
-        app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/userPasswordText" />
 
     <Button
         android:id="@+id/signUpButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="70dp"
+        android:layout_marginEnd="66dp"
         android:onClick="signUp"
         android:text="Sign Up"
         app:layout_constraintBaseline_toBaselineOf="@+id/signInButton"
@@ -44,13 +48,15 @@
 
     <EditText
         android:id="@+id/userEmailText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="2dp"
-        android:layout_marginTop="99dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="204dp"
+        android:layout_marginBottom="46dp"
         android:ems="10"
         android:hint="user email"
         android:inputType="textPersonName"
+        app:layout_constraintBottom_toTopOf="@+id/userPasswordText"
+        app:layout_constraintEnd_toEndOf="@+id/userPasswordText"
         app:layout_constraintStart_toStartOf="@+id/userPasswordText"
         app:layout_constraintTop_toTopOf="parent" />
 
