--- a/app/src/main/res/layout/recyler_view_row.xml
+++ b/app/src/main/res/layout/recyler_view_row.xml
@@ -1,35 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="@drawable/border_stroke"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/recyclerEmailText"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="15dp"
-        android:paddingTop="5dp"
-        android:text="TextView"
-        android:textSize="20sp" />
+        android:orientation="horizontal"
+        android:layout_margin="5dp"
+        >
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/recyclerUserPhoto"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@mipmap/ic_launcher_round"
+
+            />
+
+        <TextView
+            android:id="@+id/recyclerEmailText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="15dp"
+            android:paddingTop="5dp"
+            android:layout_gravity="center"
+            android:paddingStart="10dp"
+            android:textStyle="bold"
+            android:text="TextView"
+            android:textSize="15sp" />
+
+    </LinearLayout>
+
+
 
     <ImageView
         android:id="@+id/recyclerImageView"
-        android:layout_width="379dp"
+        android:layout_width="match_parent"
         android:layout_height="203dp"
         android:layout_gravity="center"
         android:paddingTop="5dp"
         app:srcCompat="@android:drawable/screen_background_dark" />
 
-    <TextView
-        android:id="@+id/recyclerCommentText"
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="5dp"
-        android:paddingLeft="15dp"
-        android:textSize="20dp"
-        android:text="TextView" />
+        android:orientation="vertical"
+        android:padding="10dp"
+        >
+
+        <TextView
+            android:id="@+id/recyclerCommentName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:paddingLeft="15dp"
+            android:textSize="17sp"
+            android:text="TextView"
+            android:textStyle="bold"
+
+            />
+
+        <TextView
+            android:id="@+id/recyclerCommentText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:paddingLeft="15dp"
+            android:textSize="17sp"
+
+            />
+
+
+
+    </LinearLayout>
+
+
 
 </LinearLayout>
