--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:gravity="center"
 
-    tools:context=".ui.MainActivity">
+    tools:context=".ui.LoginActivity">
 
     <ImageView
         android:layout_width="wrap_content"
