Beğeni Butonu Ekledi

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/instagram"
+
         />
 
 
@@ -46,7 +47,7 @@
         >
 
         <Button
-            android:id="@+id/signInButton"
+            android:id="@+id/signIn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/black"
@@ -56,7 +57,7 @@
             />
 
         <Button
-            android:id="@+id/signUpButton"
+            android:id="@+id/signUp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/black"
