--- a/app/src/main/res/layout/recyler_view_row.xml
+++ b/app/src/main/res/layout/recyler_view_row.xml
@@ -22,6 +22,8 @@
 
             />
 
+
+
         <TextView
             android:id="@+id/recyclerEmailText"
             android:layout_width="match_parent"
@@ -45,6 +47,40 @@
         android:layout_gravity="center"
         android:paddingTop="5dp"
         app:srcCompat="@android:drawable/screen_background_dark" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        android:orientation="horizontal"
+        >
+
+        <Button
+            android:id="@+id/recyclerLikeButton"
+            android:tag="dislike"
+            android:layout_width="30dp"
+            android:layout_height="20dp"
+            android:background="@drawable/ig_unlike"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginBottom="5dp"
+            />
+
+        <TextView
+            android:id="@+id/recyclerLikeNumber"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0"
+            android:gravity="top"
+            android:textSize="14sp"
+            android:layout_marginLeft="5dp"
+            android:textStyle="bold"
+            android:textColor="@color/black"
+
+            />
+
+    </LinearLayout>
+
 
 
     <LinearLayout
