--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -5,14 +5,16 @@
     android:layout_height="match_parent"
     android:gravity="top|center"
     android:orientation="vertical"
-    android:background="#C19767"
+    android:background="@color/white"
     tools:context=".ui.ProfileActivity">
 
     <ImageView
         android:id="@+id/profileImageView"
         android:layout_width="250dp"
         android:layout_height="250dp"
-        android:src="@mipmap/ic_launcher_round" />
+        android:src="@mipmap/ic_launcher_round"
+        android:layout_margin="10dp"
+        />
 
     <TextView
         android:layout_width="200dp"
@@ -31,15 +33,6 @@
         android:layout_marginBottom="10dp"
         android:textSize="20sp"
          />
-
-    <TextView
-        android:layout_width="200dp"
-        android:layout_height="30dp"
-        android:text="İletişim"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:layout_marginBottom="10dp"
-        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/profileEmail"
